styles/index.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Viga&display=swap');
*,
*::after,
*::before {
  margin: 0;
  box-sizing: border-box;
}

:root {
  --background: #f0eee8;
  --primary: #000000;
  --yellow: #f1d02c;
  --pink: #e88fa3;
  --green: #40a857;
  --red: #eb483d;
}

body {
  font-family: 'Helvetica', sans-serif;
  font-size: 1.6rem;
  background-color: var(--background);
  height: 100%;
  width: 100%;
  font-size: 62.5%;
  overflow-x: hidden;
}

main {
  width: 100vw;
  height: 100vh;
}
nav {
  width: 90%;
  height: 7rem;
  margin: 0 auto;
  text-align: center;
  text-transform: uppercase;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
nav a {
  font-size: 1.4rem;
  color: #000000;
  text-decoration: none;
}
nav img {
  height: 2rem;
}
/* First View */
.first-view {
  display: grid;
  width: 100%;
}
.header {
  width: 100%;
  margin: 1rem;
}
h1 {
  font-size: 4.8rem;
  text-transform: uppercase;
  white-space: pre-wrap;
  font-weight: 900;
  z-index: 1;
  position: absolute;
}
.shapes {
  width: 100%;
  z-index: 0;
  position: relative;
  height: 20rem;
}
.rectangle {
  margin-left: 1rem;
  width: 8rem;
  height: 4rem;
  background: var(--yellow);
  top: 0;
}
.triangel {
  width: 0;
  height: 0;
  border-left: 4.5rem solid transparent;
  border-right: 4.5rem solid transparent;
  border-bottom: 7.5rem solid var(--green);
  position: absolute;
  top: 2rem;
  right: 2rem;
}
.circle {
  width: 8rem;
  height: 8rem;
  border-radius: 50%;
  background: var(--pink);
  position: absolute;
  bottom: 1rem;
}
.sqaure {
  width: 7rem;
  height: 7rem;
  background: var(--red);
  right: 1rem;
  bottom: 1rem;
  position: absolute;
}
.app-description {
  margin: 1rem;
}

.first-view {
  letter-spacing: 0.1rem;
  font-size: 1.2rem;
  font-weight: 300;
  line-height: 2.2rem;
}
.border {
  margin: 0.8rem;
  height: 0.7rem;
  width: 7rem;
}
.second-view {
  width: 100%;
  height: 100%;
  padding-top: 5rem;
}

h2 {
  margin-left: 0.8rem;
  font-size: 1.4rem;
}
.second-view p {
  font-size: 1.2rem;
  line-height: 2rem;
  font-weight: 300;
  white-space: pre-line;
  margin-left: 0.8rem;
}
h3 {
  font-size: 1.2rem;
}

